# lajiproject

./: CMakeLists.txt  README.md  lex.yy.c  main.cpp  syntax.tab.c  syntax.tab.h  type.hpp
src/: ir_generator.hpp
src/ir/: ir.hpp  ir_generator.hpp
src/node/: node.h
src/optimizer/: cfg.cpp  cfg.h  dag.cpp  dag.h  optimizer.hpp
src/semantic_analysis/: args.hpp  base.hpp  basic.hpp  comp_st.cpp  comp_st.h  dec.hpp  dec_list.cpp  dec_list.h  def.hpp  def_list.cpp  def_list.h  exp.cpp  exp.h  ext_dec_list.hpp  ext_def.hpp  ext_def_list.hpp  fun_dec.hpp  param_dec.hpp  program.hpp  semantic_analysis.h  semantic_analysis.hpp  specifier.cpp  specifier.h  stmt.hpp  stmt_list.hpp  struct_specifier.hpp  var_dec.hpp  var_list.hpp
src/symbol_table/: symbol_table.hpp
test/: XD.spl  test_2_o01.spl  test_3_c01.spl
